--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
+
 body{
- background-color: #e9e9e9;
+ background-color: white;
 }
+
 #txt{
   color: lightblue;
   font-size: 30px;
@@ -19,7 +19,3 @@ body{
   cursor: pointer;
   border-color: transparent;
 }
-=======
->>>>>>> parent of f50c715... Version 3
-=======
->>>>>>> parent of f50c715... Version 3
