--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
 
 #btn{
   background: lightpink;
-  font: 20px;
+  font-size: 20px;
   font-family: monospace;
   padding: 7px;
   border-radius: 15px;
